[gd_scene load_steps=21 format=2]

[ext_resource path="res://scene/KinematicBody.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/ograde.gd" type="Script" id=2]
[ext_resource path="res://textures/beton.jpg" type="Texture" id=3]
[ext_resource path="res://default_env.tres" type="Environment" id=4]
[ext_resource path="res://script/pause_popup.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0784314, 0, 0.0784314, 0.54902 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.313726 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0784314, 0, 0.0784314, 0.54902 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.313726 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0784314, 0, 0.0784314, 0.54902 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.313726 )

[sub_resource type="CubeMesh" id=7]

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.108398, 0.108398, 0.108398, 1 )
albedo_texture = ExtResource( 3 )

[sub_resource type="BoxShape" id=9]

[sub_resource type="CubeMesh" id=10]

[sub_resource type="SpatialMaterial" id=11]
flags_transparent = true
albedo_color = Color( 1, 0, 0, 0.329412 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 0.001, 0.001, 1 )

[sub_resource type="SpatialMaterial" id=13]
albedo_color = Color( 0.278431, 0.278431, 0.278431, 1 )

[sub_resource type="BoxShape" id=14]

[sub_resource type="SpatialMaterial" id=15]
flags_transparent = true
albedo_color = Color( 0.576471, 0.568627, 0.568627, 0.254902 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )

[node name="option_popup" type="Popup" parent="."]
margin_left = -16.9707
margin_right = 1912.03
margin_bottom = 1070.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="option_popup"]
margin_left = -1796.43
margin_top = -1215.59
margin_right = 3449.57
margin_bottom = 2571.41
color = Color( 0, 0, 0, 0.627451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="option_popup"]
margin_left = 258.561
margin_top = 331.545
margin_right = 1226.56
margin_bottom = 458.545

[node name="pause_popup" type="Popup" parent="."]
pause_mode = 2
margin_left = 292.0
margin_top = 123.0
margin_right = 1079.0
margin_bottom = 698.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="pause_popup"]
margin_left = -1658.37
margin_top = -1383.1
margin_right = 3587.63
margin_bottom = 2403.9
color = Color( 0, 0, 0, 0.627451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ignore" type="Button" parent="pause_popup"]
margin_left = 3753.0
margin_top = 561.0
margin_right = 3765.0
margin_bottom = 581.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="of_pause" type="Button" parent="pause_popup"]
margin_left = 76.0
margin_top = 64.0
margin_right = 688.0
margin_bottom = 172.0
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option" type="Button" parent="pause_popup"]
margin_left = 76.0
margin_top = 231.0
margin_right = 688.0
margin_bottom = 339.0
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Option"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leave" type="Button" parent="pause_popup"]
margin_left = 76.0
margin_top = 399.123
margin_right = 688.0
margin_bottom = 507.123
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Quitter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS_COUNTER" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -111.0
margin_top = 37.0
margin_right = -73.0
margin_bottom = 58.0
rect_scale = Vector2( 2.5, 2.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 4 )

[node name="soleil" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.642788, 0.766044, 0, -0.766044, -0.642788, 0, 20, 0 )
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1.5, 0, 0, 0, -6.55671e-08, -2, 0, 1.5, -8.74228e-08, -15.3522, 4, 73.3277 )
walk_speed = 25
run_speed = 35
mouse_sensitivity = 6

[node name="Camera" parent="Player" index="2"]
transform = Transform( -0.666667, -4.37114e-08, -2.91409e-08, 2.91409e-08, 9.55343e-16, -0.666667, 5.82819e-08, -0.5, 1.27379e-15, 0, 0, -1.37784 )

[node name="platform" type="StaticBody" parent="."]
transform = Transform( 50, 0, 0, 0, 1, 0, 0, 0, 50, 0, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="platform"]
transform = Transform( 6, 0, 0, 0, 1, 0, 0, 0, 6, 0, 0, 0 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="platform"]
transform = Transform( 6, 0, 0, 0, 1, 0, 0, 0, 6, 0, 0, 0 )
shape = SubResource( 9 )

[node name="Batt B" type="Spatial" parent="."]

[node name="portes" type="StaticBody" parent="Batt B"]
transform = Transform( 2, 0, 0, 0, 4, 0, 0, 0, 1, -54, 5, 79 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/portes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )
mesh = SubResource( 10 )
material/0 = SubResource( 11 )

[node name="MeshInstance2" type="MeshInstance" parent="Batt B/portes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -12 )
mesh = SubResource( 10 )
material/0 = SubResource( 11 )

[node name="MeshInstance3" type="MeshInstance" parent="Batt B/portes"]
transform = Transform( 0.5, 0, 0, 0, 1, 0, 0, 0, 4, -17.2, 0, 16.5 )
mesh = SubResource( 10 )
material/0 = SubResource( 11 )

[node name="MeshInstance4" type="MeshInstance" parent="Batt B/portes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, -40.5 )
mesh = SubResource( 10 )
material/0 = SubResource( 11 )

[node name="MeshInstance5" type="MeshInstance" parent="Batt B/portes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.3, 0, -2 )
mesh = SubResource( 10 )
material/0 = SubResource( 11 )

[node name="MeshInstance6" type="MeshInstance" parent="Batt B/portes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.3, 0, -12 )
mesh = SubResource( 10 )
material/0 = SubResource( 11 )

[node name="MeshInstance7" type="MeshInstance" parent="Batt B/portes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.7, 0, -7 )
mesh = SubResource( 10 )
material/0 = SubResource( 11 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/portes"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -6.38359, 29.5765, 0 )
shape = SubResource( 12 )

[node name="RDC_1er_partie" type="Spatial" parent="Batt B"]

[node name="B116" type="Spatial" parent="Batt B/RDC_1er_partie"]

[node name="mur_1_B116" type="StaticBody" parent="Batt B/RDC_1er_partie/B116"]
transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 9.25, -88.394, 6, 82.2477 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B116/mur_1_B116"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B116/mur_1_B116"]
shape = SubResource( 14 )

[node name="mur_2_B116" type="StaticBody" parent="Batt B/RDC_1er_partie/B116"]
transform = Transform( 14, 0, 0, 0, 2, 0, 0, 0, 1, -73.4, 3, 106.5 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B116/mur_2_B116"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B116/mur_2_B116"]
shape = SubResource( 14 )

[node name="mur_3_B116" type="StaticBody" parent="Batt B/RDC_1er_partie/B116"]
transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 4, -88.394, 6, 103.5 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B116/mur_3_B116"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B116/mur_3_B116"]
shape = SubResource( 14 )

[node name="window2" type="StaticBody" parent="Batt B/RDC_1er_partie/B116"]
transform = Transform( 14, 0, 0, 0, 2, 0, 0, 0, 1, -73.358, 7, 106.5 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B116/window2"]
mesh = SubResource( 10 )
material/0 = SubResource( 15 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B116/window2"]
shape = SubResource( 14 )

[node name="window" type="StaticBody" parent="Batt B/RDC_1er_partie/B116"]
transform = Transform( 11.72, 0, 0, 0, 2, 0, 0, 0, 1, -45.7, 7, 106.5 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B116/window"]
mesh = SubResource( 10 )
material/0 = SubResource( 15 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B116/window"]
shape = SubResource( 14 )

[node name="mur_4_B116" type="StaticBody" parent="Batt B/RDC_1er_partie/B116"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, -54, 10, 77 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B116/mur_4_B116"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B116/mur_4_B116"]
shape = SubResource( 14 )

[node name="mur_5_B116" type="StaticBody" parent="Batt B/RDC_1er_partie/B116"]
transform = Transform( 4.3, 0, 0, 0, 5, 0, 0, 0, 1, -47.7, 6, 77 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B116/mur_5_B116"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B116/mur_5_B116"]
shape = SubResource( 14 )

[node name="mur_6_B116" type="StaticBody" parent="Batt B/RDC_1er_partie/B116"]
transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 15.8, -33, 6, 91.8 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B116/mur_6_B116"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B116/mur_6_B116"]
shape = SubResource( 14 )

[node name="mur_7_B116" type="StaticBody" parent="Batt B/RDC_1er_partie/B116"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 4, -88.4, 10, 95.5 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B116/mur_7_B116"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B116/mur_7_B116"]
shape = SubResource( 14 )

[node name="mur_8_B116" type="StaticBody" parent="Batt B/RDC_1er_partie/B116"]
transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, -58.4, 6, 106.5 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B116/mur_8_B116"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B116/mur_8_B116"]
shape = SubResource( 14 )

[node name="mur_9_B116" type="StaticBody" parent="Batt B/RDC_1er_partie/B116"]
transform = Transform( 11.72, 0, 0, 0, 2, 0, 0, 0, 1, -45.7, 3, 106.5 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B116/mur_9_B116"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B116/mur_9_B116"]
shape = SubResource( 14 )

[node name="mur_10_B116" type="StaticBody" parent="Batt B/RDC_1er_partie/B116"]
transform = Transform( 11.72, 0, 0, 0, 1, 0, 0, 0, 1, -45.7, 10, 106.5 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B116/mur_10_B116"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B116/mur_10_B116"]
shape = SubResource( 14 )

[node name="mur_11_B116" type="StaticBody" parent="Batt B/RDC_1er_partie/B116"]
transform = Transform( 14, 0, 0, 0, 1, 0, 0, 0, 1, -73.4, 10, 106.5 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B116/mur_11_B116"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B116/mur_11_B116"]
shape = SubResource( 14 )

[node name="mur_B117_B116" type="StaticBody" parent="Batt B/RDC_1er_partie/B116"]
transform = Transform( 4, 0, 0, 0, 5, 0, 0, 0, 1, -85.4, 6, 72 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B116/mur_B117_B116"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B116/mur_B117_B116"]
shape = SubResource( 14 )

[node name="mur_B117_B116_2" type="StaticBody" parent="Batt B/RDC_1er_partie/B116"]
transform = Transform( 10.6, 0, 0, 0, 5, 0, 0, 0, 1, -66.8086, 6, 72 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B116/mur_B117_B116_2"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B116/mur_B117_B116_2"]
shape = SubResource( 14 )

[node name="mur_B117_B116_3" type="StaticBody" parent="Batt B/RDC_1er_partie/B116"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, -79.4, 10, 72 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B116/mur_B117_B116_3"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B116/mur_B117_B116_3"]
shape = SubResource( 14 )

[node name="mur_10_B117" type="StaticBody" parent="Batt B/RDC_1er_partie/B116"]
transform = Transform( 2.7, 0, 0, 0, 5, 0, 0, 0, 1, -36.7, 6, 77 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B116/mur_10_B117"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B116/mur_10_B117"]
shape = SubResource( 14 )

[node name="B117" type="Spatial" parent="Batt B/RDC_1er_partie"]

[node name="mur_1_B117" type="StaticBody" parent="Batt B/RDC_1er_partie/B117"]
transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 16.76, -88.394, 6, 54.2642 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B117/mur_1_B117"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B117/mur_1_B117"]
shape = SubResource( 14 )

[node name="mur_2_B117" type="StaticBody" parent="Batt B/RDC_1er_partie/B117"]
transform = Transform( 14, 0, 0, 0, 2, 0, 0, 0, 1, -73.4, 3, 38.5 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B117/mur_2_B117"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B117/mur_2_B117"]
shape = SubResource( 14 )

[node name="mur_3_B117" type="StaticBody" parent="Batt B/RDC_1er_partie/B117"]
transform = Transform( 11.72, 0, 0, 0, 2, 0, 0, 0, 1, -45.7, 3, 38.5 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B117/mur_3_B117"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B117/mur_3_B117"]
shape = SubResource( 14 )

[node name="window" type="StaticBody" parent="Batt B/RDC_1er_partie/B117"]
transform = Transform( 11.72, 0, 0, 0, 2, 0, 0, 0, 1, -45.7, 7, 38.5 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B117/window"]
mesh = SubResource( 10 )
material/0 = SubResource( 15 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B117/window"]
shape = SubResource( 14 )

[node name="window2" type="StaticBody" parent="Batt B/RDC_1er_partie/B117"]
transform = Transform( 14, 0, 0, 0, 2, 0, 0, 0, 1, -73.3585, 7, 38.5 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B117/window2"]
mesh = SubResource( 10 )
material/0 = SubResource( 15 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B117/window2"]
shape = SubResource( 14 )

[node name="mur_4_B117" type="StaticBody" parent="Batt B/RDC_1er_partie/B117"]
transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 15.27, -33, 6, 52.75 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B117/mur_4_B117"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B117/mur_4_B117"]
shape = SubResource( 14 )

[node name="mur_5_B117" type="StaticBody" parent="Batt B/RDC_1er_partie/B117"]
transform = Transform( 4.3, 0, 0, 0, 5, 0, 0, 0, 1, -47.7, 6, 67 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B117/mur_5_B117"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B117/mur_5_B117"]
shape = SubResource( 14 )

[node name="mur_6_B117" type="StaticBody" parent="Batt B/RDC_1er_partie/B117"]
transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 1, -58.4, 6, 38.5 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B117/mur_6_B117"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B117/mur_6_B117"]
shape = SubResource( 14 )

[node name="mur_7_B117" type="StaticBody" parent="Batt B/RDC_1er_partie/B117"]
transform = Transform( 11.72, 0, 0, 0, 1, 0, 0, 0, 1, -45.7, 10, 38.5 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B117/mur_7_B117"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B117/mur_7_B117"]
shape = SubResource( 14 )

[node name="mur_8_B117" type="StaticBody" parent="Batt B/RDC_1er_partie/B117"]
transform = Transform( 14, 0, 0, 0, 1, 0, 0, 0, 1, -73.4, 10, 38.5 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B117/mur_8_B117"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B117/mur_8_B117"]
shape = SubResource( 14 )

[node name="mur_9_B117" type="StaticBody" parent="Batt B/RDC_1er_partie/B117"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, -54, 10, 67 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B117/mur_9_B117"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B117/mur_9_B117"]
shape = SubResource( 14 )

[node name="mur_10_B117" type="StaticBody" parent="Batt B/RDC_1er_partie/B117"]
transform = Transform( 2.7, 0, 0, 0, 5, 0, 0, 0, 1, -36.7, 6, 67 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/B117/mur_10_B117"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/B117/mur_10_B117"]
shape = SubResource( 14 )

[node name="couloir" type="Spatial" parent="Batt B/RDC_1er_partie"]

[node name="mur_couloir" type="StaticBody" parent="Batt B/RDC_1er_partie/couloir"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, -30, 10, 38.5 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/couloir/mur_couloir"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/couloir/mur_couloir"]
shape = SubResource( 14 )

[node name="mur_couloir2" type="StaticBody" parent="Batt B/RDC_1er_partie/couloir"]
transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 0.7, -51, 6, 75.3 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/couloir/mur_couloir2"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/couloir/mur_couloir2"]
shape = SubResource( 14 )

[node name="mur_couloir3" type="StaticBody" parent="Batt B/RDC_1er_partie/couloir"]
transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 0.7, -51, 6, 68.7 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/couloir/mur_couloir3"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/couloir/mur_couloir3"]
shape = SubResource( 14 )

[node name="mur_couloir4" type="StaticBody" parent="Batt B/RDC_1er_partie/couloir"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, -41.4, 10, 77 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/couloir/mur_couloir4"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/couloir/mur_couloir4"]
shape = SubResource( 14 )

[node name="mur_couloir5" type="StaticBody" parent="Batt B/RDC_1er_partie/couloir"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 1, -41.4, 10, 67 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/couloir/mur_couloir5"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/couloir/mur_couloir5"]
shape = SubResource( 14 )

[node name="mur du fond" type="StaticBody" parent="Batt B/RDC_1er_partie"]
transform = Transform( 0.3, 0, 0, 0, 5, 0, 0, 0, 6, -56.3, 6, 72 )

[node name="MeshInstance" type="MeshInstance" parent="Batt B/RDC_1er_partie/mur du fond"]
mesh = SubResource( 10 )
material/0 = SubResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="Batt B/RDC_1er_partie/mur du fond"]
shape = SubResource( 14 )

[connection signal="button_up" from="pause_popup/of_pause" to="pause_popup" method="_on_of_pause_button_up"]
[connection signal="button_up" from="pause_popup/Option" to="pause_popup" method="_on_Option_button_up"]
[connection signal="button_up" from="pause_popup/leave" to="pause_popup" method="_on_leave_button_up"]

[editable path="Player"]
